# ad-channel-recommendation-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  social_media_ads_filtered.csv
README_word_archivos/: filelist.xml
notebooks/: 00_recommendation_dataprep.ipynb  01_eda_publicidad.ipynb  02_preparacion_datos.ipynb  03_baseline_recomendacion.ipynb  04_bandit_thompson_sampling.ipynb  05_evaluacion_resultados.ipynb  06_presentacion_sistema.ipynb
src/: __init__.py  config.py
src/data/: __init__.py  carga_datos.py  features.py  limpieza.py
src/evaluacion/: __init__.py  experimentos.py  metricas.py
src/modelos/: __init__.py  bandit_thompson.py  baseline.py  filtro_colaborativo.py  recompensas.py
src/visualizacion/: __init__.py  graficos.py
